--- a/header.html
+++ b/header.html
@@ -87,6 +87,65 @@
                 <img src="/assets/images/clase_gratis_1.png" alt="primera classe gratis">
             </a>
         </div>
+        <div class="section grid">
+            <div class="intro">
+                <p class="subtitle">qué hacemos</p>
+                <h2>defensa toride</h2>
+                <p>En nuestras clases de artes marciales, nos enfocamos en el kickboxing y la defensa personal para ofrecerte una experiencia completa. Trabajamos la disciplina, la concentración y el respeto, valores esenciales de las artes marciales, mientras te pones en forma y disfrutas del deporte. Además de mejorar tu condición física, aprenderás técnicas efectivas para protegerte y ganar confianza en ti mismo. ¡Ven a sudar la camiseta, a superarte y a formar parte de una comunidad que comparte la pasión por las artes marciales!</p>
+            </div>
+            <div class="image intro-img">
+                <img src="assets/images/img_example.png" alt="example" class="contain">
+            </div>
+        </div>
+        <div class="section grid">
+            <div class="intro-center">
+                <p class="subtitle">visión</p>
+                <h2>propósito</h2>
+                <p>En nuestras clases de artes marciales, nos enfocamos en el kickboxing y la defensa personal para ofrecerte una experiencia completa. Trabajamos la disciplina, la concentración y el respeto, valores esenciales de las artes marciales, mientras te pones en forma y disfrutas del deporte.</p>
+            </div>
+        </div>
+        <div class="section grid">
+            <div class="intro-center">
+                <p class="subtitle">por edades</p>
+                <h2>programas</h2>
+            </div>
+            <div class="program peques">
+                <a href="#" class="image ar-9-14 peques">
+                    <img src="assets/images/peques.jpeg" alt="peques" class="cover">
+                </a>
+                <div class="program-heading">
+                    <h3>Peques</h3>
+                    <p>4-7 años</p>
+                </div>
+            </div>
+            <div class="program infantil">
+                <a href="#" class="image ar-9-14 infantil">
+                    <img src="assets/images/infantil.jpeg" alt="infantil" class="cover">
+                </a>
+                <div class="program-heading">
+                    <h3>Infantil</h3>
+                    <p>8-11 años</p>
+                </div>
+            </div>
+            <div class="program junior">
+                <a href="#" class="image ar-9-14 junior">
+                    <img src="assets/images/junior.jpeg" alt="junior" class="cover">
+                </a>
+                <div class="program-heading">
+                    <h3>Junior</h3>
+                    <p>12-15 años</p>
+                </div>
+            </div>
+            <div class="program senior">
+                <a href="#" class="image ar-9-14 senior">
+                    <img src="assets/images/senior.jpeg" alt="senior" class="cover">
+                </a>
+                <div class="program-heading">
+                    <h3>Senior</h3>
+                    <p>+16 años</p>
+                </div>
+            </div>
+        </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="assets/js/header.js"></script>
