programs_wrapper, shop_wrapper y animación del width con cubic-bezier

--- a/header.html
+++ b/header.html
@@ -68,11 +68,11 @@
         </div>
     </header>
     <main>
-        <div class="home-hero">
+        <section class="home-hero">
             <div class="home-hero__content">
                 <h1>Escuela de <br>Artes Marciales</h1>
                 <p>Disciplina, respeto y confianza en cada movimiento. Entrena con nosotros para fortalecer tu cuerpo y mente, supera tus límites y domina el arte del combate.</p>
-                <a href="#">
+                <a href="#" style="display: inline-block;">
                     <button class="button">
                         <span>quiero probar</span>
                         <svg viewBox="0 0 23 15.9" width="20">
@@ -86,8 +86,8 @@
             <a href="#" class="clase_gratis">
                 <img src="/assets/images/clase_gratis_1.png" alt="primera classe gratis">
             </a>
-        </div>
-        <div class="section grid">
+        </section>
+        <section class="section grid">
             <div class="intro">
                 <p class="subtitle">qué hacemos</p>
                 <h2>defensa toride</h2>
@@ -96,56 +96,83 @@
             <div class="image intro-img">
                 <img src="assets/images/img_example.png" alt="example" class="contain">
             </div>
-        </div>
-        <div class="section grid">
+        </section>
+        <section class="section grid">
             <div class="intro-center">
                 <p class="subtitle">visión</p>
                 <h2>propósito</h2>
                 <p>En nuestras clases de artes marciales, nos enfocamos en el kickboxing y la defensa personal para ofrecerte una experiencia completa. Trabajamos la disciplina, la concentración y el respeto, valores esenciales de las artes marciales, mientras te pones en forma y disfrutas del deporte.</p>
             </div>
-        </div>
-        <div class="section grid">
+        </section>
+        <section class="section grid">
             <div class="intro-center">
                 <p class="subtitle">por edades</p>
                 <h2>programas</h2>
             </div>
-            <div class="program peques">
-                <a href="#" class="image ar-9-14 peques">
-                    <img src="assets/images/peques.jpeg" alt="peques" class="cover">
-                </a>
-                <div class="program-heading">
-                    <h3>Peques</h3>
-                    <p>4-7 años</p>
+            <div class="program_wrapper">
+                <div class="program peques">
+                    <a href="#" class="image ar-9-14 peques">
+                        <img src="assets/images/peques.jpeg" alt="peques" class="cover">
+                    </a>
+                    <div class="program-heading">
+                        <h3>Peques</h3>
+                        <p>4-7 años</p>
+                    </div>
+                </div>
+                <div class="program infantil">
+                    <a href="#" class="image ar-9-14 infantil">
+                        <img src="assets/images/infantil.jpeg" alt="infantil" class="cover">
+                    </a>
+                    <div class="program-heading">
+                        <h3>Infantil</h3>
+                        <p>8-11 años</p>
+                    </div>
+                </div>
+                <div class="program junior">
+                    <a href="#" class="image ar-9-14 junior">
+                        <img src="assets/images/junior.jpeg" alt="junior" class="cover">
+                    </a>
+                    <div class="program-heading">
+                        <h3>Junior</h3>
+                        <p>12-15 años</p>
+                    </div>
+                </div>
+                <div class="program senior">
+                    <a href="#" class="image ar-9-14 senior">
+                        <img src="assets/images/senior.jpeg" alt="senior" class="cover">
+                    </a>
+                    <div class="program-heading">
+                        <h3>Senior</h3>
+                        <p>+16 años</p>
+                    </div>
+                </div>
+             </div>
+        </section>
+        <section class="section grid">
+            <div class="intro-center">
+                <p class="subtitle">por edades</p>
+                <h2>programas</h2>
+            </div>
+            <div class="shop_wrapper grid">
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
                 </div>
             </div>
-            <div class="program infantil">
-                <a href="#" class="image ar-9-14 infantil">
-                    <img src="assets/images/infantil.jpeg" alt="infantil" class="cover">
-                </a>
-                <div class="program-heading">
-                    <h3>Infantil</h3>
-                    <p>8-11 años</p>
-                </div>
-            </div>
-            <div class="program junior">
-                <a href="#" class="image ar-9-14 junior">
-                    <img src="assets/images/junior.jpeg" alt="junior" class="cover">
-                </a>
-                <div class="program-heading">
-                    <h3>Junior</h3>
-                    <p>12-15 años</p>
-                </div>
-            </div>
-            <div class="program senior">
-                <a href="#" class="image ar-9-14 senior">
-                    <img src="assets/images/senior.jpeg" alt="senior" class="cover">
-                </a>
-                <div class="program-heading">
-                    <h3>Senior</h3>
-                    <p>+16 años</p>
-                </div>
-            </div>
-        </div>
+        </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="assets/js/header.js"></script>
