--- a/header.html
+++ b/header.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="assets/css/theme.css">
     <link rel="stylesheet" href="assets/css/header.css">
 </head>
-<body>
+<body data-theme="light">
     <header>
         <div class="header__wrapper">
             <a href="#" class="header__logo">
-                <svg viewBox="0 0 1114.4 800" height="56" fill="currentColor">
+                <svg viewBox="0 0 1114.4 800" height="56" fill="#1d1d1b">
                     <g class="oride">
                     <path class="oride-o" d="M469.4,340.3c-5.8-14.1-13.5-21.5-15.1-23-7.7-7.1-15.5-10.4-19.1-11.9,0,0-9.8-4.2-21.3-4.8-20.7-1.1-51.6,8.3-77.7,29.6-32.6,26.6-43.1,60-46.5,71.4-3.5,11.6-9,30.8-4.5,54.7,2,10.4,4.3,22.3,13.4,33,22.9,26.8,65.5,19.2,69.9,18.4,12.6-2.4,22.6-7.5,28.2-10.4,3.2-1.6,15.9-8.3,29.4-20.7,8.5-7.8,42.7-39.2,48.5-88.7,3.1-26.3-3.5-43.4-5.2-47.5h0ZM437.8,361.5c-1,4.5-2.6,10.4-5.9,21.9-1,3.5-2.9,10.4-3.8,13.3-6.4,21.5-18.1,44-22,51.4-9.2,17.2-13.8,25.8-22.6,35.3-8.9,9.5-17,18.1-29.6,18.9-1,0-15.6.8-25.1-9.6-6-6.6-7-14.4-8-23-1.1-8.8-.3-16.2,1.1-24.8,3.5-20.1,9.4-35.7,12.2-42.8,4.9-12.3,12.8-28.7,24.9-45.9,7.9-11.1,14.3-18,15.8-19.6,8.4-8.9,16.5-15.4,22.9-19.9,11.3-9.3,24.9-11.5,32.8-6,6.6,4.6,8.8,14.1,9.5,17,1,4.5.9,7.9.7,13.6-.3,8.2-1.6,14.2-2.9,20.3h0Z"/>
                     <path class="oride-r" d="M466.6,479.1c-6,18.3-10,30.4-10,30.4h50.2c5.3-16.7,13.3-40.8,24.1-69.5,15.9-42.6,24.1-64.1,35.8-78.4,10.6-13,36.4-38.5,93.5-47.5-25.1-3-44.1-.1-56.9,3-18.6,4.6-45.8,15.2-44.9,14.9l6.9-24.1h-42.6s-37.6,114.8-56.1,171.1h0Z"/>
@@ -171,10 +171,146 @@
                         <p>123,45€</p>
                     </div>
                 </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section grid">
+            <div class="cta-section">
+                <h2>empezar a entrenar</h2>
+                <p>La primera patada es la que cuenta. Escríbenos, ven a probar y siente la energía de Toride. Fuerza, técnica y actitud te esperan. <br>¡Es tu momento de empezar!</p>
+                <a href="#" style="display: inline-block;">
+                    <button class="button">
+                        <span>quiero probar</span>
+                        <svg viewBox="0 0 23 15.9" width="20">
+                            <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                            <path
+                                d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                        </svg>
+                    </button>
+                </a>
             </div>
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="assets/js/header.js"></script>
+    <script src="assets/js/theme-toggle.js"></script>
 </body>
 </html>
