--- a/header.html
+++ b/header.html
@@ -72,15 +72,13 @@
             <div class="home-hero__content">
                 <h1>Escuela de <br>Artes Marciales</h1>
                 <p>Disciplina, respeto y confianza en cada movimiento. Entrena con nosotros para fortalecer tu cuerpo y mente, supera tus límites y domina el arte del combate.</p>
-                <a href="#" style="display: inline-block;">
-                    <button class="button">
-                        <span>quiero probar</span>
-                        <svg viewBox="0 0 23 15.9" width="20">
-                            <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
-                            <path
-                                d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
-                        </svg>
-                    </button>
+                <a href="#" class="button">
+                    <span>quiero probar</span>
+                    <svg viewBox="0 0 23 15.9" width="20">
+                        <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                        <path
+                            d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                    </svg>
                 </a>
             </div>
             <a href="#" class="clase_gratis">
@@ -296,17 +294,32 @@
             <div class="cta-section">
                 <h2>empezar a entrenar</h2>
                 <p>La primera patada es la que cuenta. Escríbenos, ven a probar y siente la energía de Toride. Fuerza, técnica y actitud te esperan. <br>¡Es tu momento de empezar!</p>
-                <a href="#" style="display: inline-block;">
-                    <button class="button">
-                        <span>quiero probar</span>
-                        <svg viewBox="0 0 23 15.9" width="20">
-                            <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
-                            <path
-                                d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
-                        </svg>
-                    </button>
+                <a href="#" class="button">
+                    <span>quiero probar</span>
+                    <svg viewBox="0 0 23 15.9" width="20">
+                        <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                        <path
+                            d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                    </svg>
                 </a>
             </div>
+        </section>
+        <section class="section grid">
+            <div class="intro-center">
+                <p class="subtitle">horario</p>
+                <h2>calendario</h2>
+            </div>
+            <div class="image full-img">
+                <img src="assets/images/AdobeStock_556035828.jpeg" alt="example" class="cover">
+            </div>
+            <a href="#" class="button">
+                <span>descargar pdf</span>
+                <svg viewBox="0 0 23 15.9" width="20">
+                    <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                    <path
+                        d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                </svg>
+            </a>
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
