contact section iframe google-maps

--- a/header.html
+++ b/header.html
@@ -321,9 +321,24 @@
                 </svg>
             </a>
         </section>
+        <section class="section grid">
+            <div class="intro">
+                <p class="subtitle">contacto</p>
+                <h2>ven a visitarnos</h2>
+                <div class="contact-links">
+                    <a href="https://maps.app.goo.gl/z1jrt3uFpkrTZ4QUA">C/ Casp, 127, l'Eixample, 08013 Barcelona</a>
+                    <a href="tel:+34699112635">699112635</a>
+                    <a href="mailto:hola@toride.es">hola@toride.es</a>
+                </div>
+            </div>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.9406753294347!2d2.1810156!3d41.3970947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a3fbf7c58edb%3A0xda83634fbd310f57!2sTORIDE!5e0!3m2!1ses!2ses!4v1742302408866!5m2!1ses!2ses" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="assets/js/header.js"></script>
-    <script src="assets/js/theme-toggle.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 </html>
