new shop look mobile

--- a/header.html
+++ b/header.html
@@ -149,7 +149,7 @@
         <section class="section grid">
             <div class="intro-center">
                 <p class="subtitle">por edades</p>
-                <h2>programas</h2>
+                <h2>suscripciones</h2>
             </div>
             <div class="shop_wrapper grid">
                 <div class="shop-item">
@@ -333,6 +333,12 @@
             </div>
             <div class="mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.9406753294347!2d2.1810156!3d41.3970947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a3fbf7c58edb%3A0xda83634fbd310f57!2sTORIDE!5e0!3m2!1ses!2ses!4v1742302408866!5m2!1ses!2ses" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+        <section class="section grid">
+            <div class="intro-center">
+                <p class="subtitle">tatami</p>
+                <h2>instalaciones</h2>
             </div>
         </section>
     </main>
