gallery & lightbox dynamic with JS

--- a/header.html
+++ b/header.html
@@ -288,6 +288,91 @@
                         <p>123,45€</p>
                     </div>
                 </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <a href="#" class="image shop-item__image">
+                        <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                        <button class="button">
+                            <span>ver producto</span>
+                            <svg viewBox="0 0 23 15.9" width="20">
+                                <path d="M14.9,8.7H1c-.4,0-.8-.3-.8-.8s.3-.8.8-.8h13.8c.4,0,.8.3.8.8s-.3.8-.8.8h0Z" />
+                                <path
+                                    d="M8.9,14.7c-.2,0-.4,0-.5-.2-.3-.3-.3-.8,0-1.1l5.4-5.4-5.4-5.4c-.3-.3-.3-.8,0-1.1s.8-.3,1.1,0l6,6c.3.3.3.8,0,1.1l-6,6c-.1.1-.3.2-.5.2h-.1Z" />
+                            </svg>
+                        </button>
+                    </a>
+                    <div class="shop-item__info">
+                        <h4>Nombre producto</h4>
+                        <p>123,45€</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="section grid">
@@ -340,11 +425,82 @@
                 <p class="subtitle">tatami</p>
                 <h2>instalaciones</h2>
             </div>
+            <div class="gallery grid">
+                <div class="gallery-item image">
+                    <img src="assets/images/AdobeStock_746710639.jpeg" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/AdobeStock_556035828.jpeg" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/clase_gratis_1.png" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/clase_gratis_2.png" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/clase_gratis_3.png" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/GUANTES.webp" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/hero-home.jpeg" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/img_example.png" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/la_escuela.jpeg" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/IMG_4384.jpeg" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/IMG_4385.jpeg" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/IMG_4386.jpeg" alt="" class="cover">
+                </div>
+                <div class="gallery-item image">
+                    <img src="assets/images/IMG_4387.jpeg" alt="" class="cover">
+                </div>
+            </div>
+            
+            <!-- Lightbox -->
+            <div class="lightbox">
+                <div class="lightbox__close">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18 6L6 18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M6 6L18 18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <div class="lightbox__content">
+                    <!-- The image will be inserted here by JavaScript -->
+                </div>
+                <div class="lightbox__nav">
+                    <button class="lightbox__nav-prev">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15 18L9 12L15 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+                    <button class="lightbox__nav-next">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9 18L15 12L9 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            </div>
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="assets/js/header.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="assets/js/gallery.js"></script>
 </body>
 </html>
