instructores section width animation

--- a/header.html
+++ b/header.html
@@ -85,6 +85,8 @@
                 <img src="/assets/images/clase_gratis_1.png" alt="primera classe gratis">
             </a>
         </section>
+
+        <!-- INTRO + IMAGE -->
         <section class="section grid">
             <div class="intro">
                 <p class="subtitle">qué hacemos</p>
@@ -95,6 +97,8 @@
                 <img src="assets/images/img_example.png" alt="example" class="contain">
             </div>
         </section>
+
+        <!-- INTRO-CENTERED -->
         <section class="section grid">
             <div class="intro-center">
                 <p class="subtitle">visión</p>
@@ -102,6 +106,8 @@
                 <p>En nuestras clases de artes marciales, nos enfocamos en el kickboxing y la defensa personal para ofrecerte una experiencia completa. Trabajamos la disciplina, la concentración y el respeto, valores esenciales de las artes marciales, mientras te pones en forma y disfrutas del deporte.</p>
             </div>
         </section>
+
+        <!-- PROGRAMAS -->
         <section class="section grid">
             <div class="intro-center">
                 <p class="subtitle">por edades</p>
@@ -146,6 +152,8 @@
                 </div>
              </div>
         </section>
+
+        <!-- SHOP -->
         <section class="section grid">
             <div class="intro-center">
                 <p class="subtitle">por edades</p>
@@ -375,6 +383,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- CTA -->
         <section class="section grid">
             <div class="cta-section">
                 <h2>empezar a entrenar</h2>
@@ -389,6 +399,8 @@
                 </a>
             </div>
         </section>
+
+        <!-- IMAGE FULL-WIDTH -->
         <section class="section grid">
             <div class="intro-center">
                 <p class="subtitle">horario</p>
@@ -406,6 +418,8 @@
                 </svg>
             </a>
         </section>
+
+        <!-- CONTACTO -->
         <section class="section grid">
             <div class="intro">
                 <p class="subtitle">contacto</p>
@@ -420,6 +434,8 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.9406753294347!2d2.1810156!3d41.3970947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a3fbf7c58edb%3A0xda83634fbd310f57!2sTORIDE!5e0!3m2!1ses!2ses!4v1742302408866!5m2!1ses!2ses" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
+
+        <!-- GALERÍA -->
         <section class="section grid">
             <div class="intro-center">
                 <p class="subtitle">tatami</p>
@@ -494,6 +510,34 @@
                     </button>
                 </div>
             </div>
+            </div>
+        </section>
+
+        <!-- INSTRUCTORES -->
+        <section class="section grid">
+            <div class="intro-center">
+                <p class="subtitle">equipo</p>
+                <h2>instructorxs</h2>
+            </div>
+            <div class="instructor_wrapper">
+                <div class="instructor">
+                    <a href="#" class="image ar-9-14 groc">
+                        <img src="assets/images/peques.jpeg" alt="peques" class="cover">
+                    </a>
+                    <div class="instructor-bio">
+                        <h3>Maties Tortosa</h3>
+                        <p>En nuestras clases de artes marciales, nos enfocamos en el kickboxing y la defensa personal para ofrecerte una experiencia completa. Trabajamos la disciplina, la concentración y el respeto, valores esenciales de las artes marciales, mientras te pones en forma y disfrutas del deporte.</p>
+                    </div>
+                </div>
+                <div class="instructor">
+                    <a href="#" class="image ar-9-14 groc">
+                        <img src="assets/images/infantil.jpeg" alt="infantil" class="cover">
+                    </a>
+                    <div class="instructor-bio">
+                        <h3>Laura Payeras</h3>
+                        <p>En nuestras clases de artes marciales, nos enfocamos en el kickboxing y la defensa personal para ofrecerte una experiencia completa. Trabajamos la disciplina, la concentración y el respeto, valores esenciales de las artes marciales, mientras te pones en forma y disfrutas del deporte.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
