--- a/header.html
+++ b/header.html
@@ -421,12 +421,15 @@
 
         <!-- CONTACTO -->
         <section class="section grid">
-            <div class="intro">
+            <div class="contact-info">
                 <p class="subtitle">contacto</p>
-                <h2>ven a visitarnos</h2>
+                <h2>toride</h2>
                 <div class="contact-links">
+                    <span>dirección</span>
                     <a href="https://maps.app.goo.gl/z1jrt3uFpkrTZ4QUA">C/ Casp, 127, l'Eixample, 08013 Barcelona</a>
+                    <span>teléfono</span>
                     <a href="tel:+34699112635">699112635</a>
+                    <span>correo electrónico</span>
                     <a href="mailto:hola@toride.es">hola@toride.es</a>
                 </div>
             </div>
@@ -522,7 +525,7 @@
             <div class="instructor_wrapper">
                 <div class="instructor">
                     <a href="#" class="image ar-9-14 groc">
-                        <img src="assets/images/peques.jpeg" alt="peques" class="cover">
+                        <img src="assets/images/IMG_4384.jpeg" alt="peques" class="cover">
                     </a>
                     <div class="instructor-bio">
                         <h3>Maties Tortosa</h3>
@@ -531,7 +534,7 @@
                 </div>
                 <div class="instructor">
                     <a href="#" class="image ar-9-14 groc">
-                        <img src="assets/images/infantil.jpeg" alt="infantil" class="cover">
+                        <img src="assets/images/IMG_4386.jpeg" alt="infantil" class="cover">
                     </a>
                     <div class="instructor-bio">
                         <h3>Laura Payeras</h3>
@@ -540,6 +543,26 @@
                 </div>
             </div>
         </section>
+
+        <!-- CONTACTO -->
+        <section class="section grid">
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.9406753294347!2d2.1810156!3d41.3970947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a3fbf7c58edb%3A0xda83634fbd310f57!2sTORIDE!5e0!3m2!1ses!2ses!4v1742302408866!5m2!1ses!2ses" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="contact-info">
+                <h2>toride</h2>
+                <div class="contact-links">
+                    <span>dirección</span>
+                    <a href="https://maps.app.goo.gl/z1jrt3uFpkrTZ4QUA">C/ Casp, 127, l'Eixample, 08013 Barcelona</a>
+                    <span>teléfono</span>
+                    <a href="tel:+34699112635">699112635</a>
+                    <span>correo electrónico</span>
+                    <a href="mailto:hola@toride.es">hola@toride.es</a>
+                </div>
+            </div>
+        </section>
+
+        
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
