--- a/hero.html
+++ b/hero.html
@@ -28,7 +28,7 @@
                 </svg>
             </a>
             <button class="burger-menu">
-                <svg width="40" height="40" viewBox="0 0 50 50" stroke="currentColor">
+                <svg width="40" height="40" viewBox="0 0 50 50" stroke="#1d1d1b">
                     <line class="top" x1="10" y1="15" x2="40" y2="15" stroke-width="4" stroke-linecap="round"/>
                     <line class="middle" x1="10" y1="25" x2="40" y2="25" stroke-width="4" stroke-linecap="round"/>
                     <line class="bottom" x1="10" y1="35" x2="40" y2="35" stroke-width="4" stroke-linecap="round"/>
@@ -69,7 +69,7 @@
     </header>
     <main>
         <section class="hero rounded">
-            <h1>Toride</h1>
+            <h1>Programa <br> <span>peques</span></h1>
         </section>
 
         <!-- INTRO-CENTERED -->
@@ -82,6 +82,46 @@
         </section>
 
         <!-- PROGRAM INFO -->
+         <section class="section">
+            <div class="program-info">
+                <div class="program-info__details peques">
+                    <h3>Detalles del programa</h3>
+                    <p>EDAD</p>
+                    <span>4-7 AÑOS</span>
+                    <p>HORARIOS</p>
+                    <span>L-V 17:30H <br>S 11:15H</span>
+                    <p>PRECIO</p>
+                    <span>4 - 7 AÑOS</span>
+                </div>
+                <div class="program-info__features">
+                    <h3>aprenderás</h3>
+                    <ul>
+                        <li>Coordinación y equilibrio</li>
+                        <li>Movimientos básicos de las artes marciales</li>
+                        <li>Concentración y autocontrol emocional</li>
+                        <li>Condicionamiento físico adecuado a la edad</li>
+                        <li>Mejora de la flexibilidad y la agilidad</li>
+                        <li>Desarrollo de la psicomotricidad y habilidades básicas</li>
+                        <li>Introducción a la autodefensa y prevención del acoso</li>
+                        <li>Fomento de la toma de decisiones y resolución de conflictos</li>
+                        <li>Construcción de la confianza y autoestima</li>
+                        <li>Inculcación de valores como la disciplina y el respeto</li>
+                    </ul>
+                </div>
+                <div class="program-info__image image">
+                    <img src="assets/images/AdobeStock_210625666.jpeg" alt="" class="cover">
+                </div>
+                <div class="program-info__features">
+                    <h3>ofrecemos</h3>
+                    <ul>
+                        <li>Entrenadores/as con títulos nacionales y experiencia profesional</li>
+                        <li>Un entorno educativo, motivador y lleno de pasión por las artes marciales</li>
+                        <li>Evaluaciones semanales para hacer un seguimiento del progreso de tu hijo/a</li>
+                        <li>Revisiones anuales para padres y alumnos para monitorizar la evolución, el desarrollo y fijar nuevos objetivos</li>
+                    </ul>
+                </div>
+            </div>
+         </section>
 
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
