--- a/header.html
+++ b/header.html
@@ -28,7 +28,7 @@
                 </svg>
             </a>
             <button class="burger-menu">
-                <svg width="40" height="40" viewBox="0 0 50 50" stroke="currentColor">
+                <svg width="40" height="40" viewBox="0 0 50 50" stroke="#1d1d1b">
                     <line class="top" x1="10" y1="15" x2="40" y2="15" stroke-width="4" stroke-linecap="round"/>
                     <line class="middle" x1="10" y1="25" x2="40" y2="25" stroke-width="4" stroke-linecap="round"/>
                     <line class="bottom" x1="10" y1="35" x2="40" y2="35" stroke-width="4" stroke-linecap="round"/>
